--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -138,7 +138,7 @@ jobs:
   run-migration-tests:
     name: Test Migrations
     runs-on: ubuntu-latest
-    environment: test
+    environment: dev
     needs:
       - build-driver
       - publish-suite
