--- a/suite/package.json
+++ b/suite/package.json
@@ -58,15 +58,13 @@
     "node-jq": "^2.3.5",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.2.5",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.0",
     "uint8arrays": "^5.1.0"
   },
   "pnpm": {
-    "resolutions": {
-      "graphql": "16.9.0"
-    },
     "overrides": {
-        "@graphql-tools/utils": "10.6.3"
+      "graphql": "16.9.0",
+      "@graphql-tools/utils": "10.7.0"
     }
   },
   "prettier": "eslint-config-3box/prettier.config",
